--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -1,49 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <title>Pagina cliente principal</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="container">
-      <!--Inicio del menu-->
-      <header class="row-12">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" [routerLink]="['/inicio']">
-              <img src="./assets/logoB.png" alt="logo" width="200" height="100"
-            /></a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
+        <!--Inicio del menu-->
+        <header class="row-12">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" [routerLink]="['/inicio']">
+                        <img src="./assets/logoB.png" alt="logo" width="200" height="100" /></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="col navbar-nav mb-2 mb-lg-0 justify-content-lg-end">
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle text-black"
-                    id="navbarDropdown"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="col navbar-nav mb-2 mb-lg-0 justify-content-lg-end">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-black" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Bienvenido, {{ usuario.nombre }}
                   </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">Configuración</a></li>
-                    <li>
-                      <a class="dropdown-item" (click)="cerrarSesion()"
-                        >Cerrar sesión</a
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Configuración</a></li>
+                                    <li>
+                                        <a class="dropdown-item" (click)="cerrarSesion()">Cerrar sesión</a
                       >
                     </li>
                   </ul>
@@ -55,6 +40,7 @@
       </header>
 
       <!--Fin del menu-->
+      
       <!--Inicio del contenido de INICIO-->
       <div class="row">
         <div class="col-12">
