--- a/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
+++ b/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
@@ -1,93 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Pagina de descripcion de lo que hace el requisito</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <!--Inicio del menu-->
-        <header class="row-12">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" [routerLink]="['/inicio']">
-                        <img src="./assets/logoB.png" alt="logo" width="200" height="100" /></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+      <!--Inicio del menu-->
+      <header class="row-12">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" [routerLink]="['/inicio']">
+              <img src="./assets/logoB.png" alt="logo" width="200" height="100"
+            /></a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="col navbar-nav mb-2 mb-lg-0 justify-content-lg-end">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-black" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Bienvenido, {{ usuario.nombre }}
-                    </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Configuración</a></li>
-                                    <li>
-                                        <a class="dropdown-item" (click)="cerrarSesion()">Cerrar sesión</a
-                        >
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="col navbar-nav mb-2 mb-lg-0 justify-content-lg-end">
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle text-black"
+                    id="navbarDropdown"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Bienvenido, {{ usuario.nombre }}
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Configuración</a></li>
+                    <li>
+                      <a class="dropdown-item" (click)="cerrarSesion()"
+                        >Cerrar sesión</a
+                      >
+                    </li>
+                  </ul>
+                </li>
+              </ul>
             </div>
-          </nav>
-        </header>
-        
-        <!-- Titulo de la vista-->
-        <div class = "row-12">
-            <div class = "col-5 justify-content-lg-end">
-                <h2>Tarea "nombre"</h2>
-            </div>
-            
-        </div>
-       
+          </div>
+        </nav>
+      </header>
 
-       <!-- Contenido de la vista-->
-        
-        <div id="descripcionRequisito">      
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">DESCRIPCIÓN </label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
+      <!-- Titulo de la vista-->
+      <div class="row-12">
+        <div class="col-5 justify-content-lg-end">
+          <h2>Tarea "nombre"</h2>
+        </div>
+      </div>
+
+      <!-- Contenido de la vista-->
+
+      <div id="descripcionRequisito">
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label"
+            >DESCRIPCIÓN
+          </label>
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
+          ></textarea>
+        </div>
+      </div>
+
+      <!-- Fecha inicio y ficha fin-->
+      <div id="fechaInicioFin" class="row align-items-center">
+        <div class="col-6 form-check" style="margin-left: 1rem">
+          <input class="form-check-input" type="checkbox" id="gridCheck" />
+          <label class="form-check-label" for="gridCheck">Terminar</label>
         </div>
 
-        <!-- Fecha inicio y ficha fin-->
-        <div id="fechaInicioFin" class="row align-items-center">
-            <div class="col-6 form-check" style="margin-left: 1rem;">
-                <input class="form-check-input" type="checkbox" id="gridCheck">
-                <label class="form-check-label" for="gridCheck">Terminar</label>
-            </div>
+        <div class="col">
+          <div class="col"></div>
+          <div class="col">
+            Comienzo:
+            <input
+              matInput
+              [matDatepicker]="datepicker"
+              placeholder="Elige una fecha"
+              style="display: inline; width: 125px"
+            />
+            <mat-datepicker-toggle
+              matSuffix
+              [for]="datepicker"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #datepicker></mat-datepicker>
+          </div>
+        </div>
 
-            <div class="col"> 
-            <div class="col"> </div>
-            <div class="col">
-                Comienzo:
-                <input matInput [matDatepicker]="datepicker" placeholder="Elige una fecha" style="display: inline; width: 125px;">
-                <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
-                <mat-datepicker #datepicker></mat-datepicker>  
-                </div>  
-            
+        <div class="col">
+          <div class="col"></div>
+          <div class="col">
+            Fin:
+            <input
+              matInput
+              [matDatepicker]="picker"
+              placeholder="Elige una fecha"
+              style="display: inline; width: 125px"
+            />
+            <mat-datepicker-toggle
+              matSuffix
+              [for]="picker"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </div>
         </div>
-   
-        <div class="col"> 
-            <div class="col"> </div>
-                <div class="col">
-                    Fin:
-                    <input matInput [matDatepicker]="picker" placeholder="Elige una fecha" style="display: inline; width: 125px;">
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
