--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -36,7 +36,7 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Bienvenido jefe de proyecto, {{ usuario.nombre }}
+                    Bienvenido, {{ usuario.nombre }}
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="#">Configuración</a></li>
@@ -56,6 +56,7 @@
       <!--Fin del menu-->
 
       <!--Inicio del contenido de INICIO-->
+
       <div class="row">
         <div class="col">
           <h1 class="text-black mt-3 ms-4">Proyectos</h1>
@@ -63,7 +64,7 @@
       </div>
       <div class="row justify-content-end">
         <div class="col-1">
-          <a [routerLink]="['/crearProyecto-jefe-proyecto']"
+          <a [routerLink]="['/crear-proyecto']"
             ><img
               id="carpeta"
               src="./assets/carpeta.png"
