--- a/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
+++ b/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
@@ -59,7 +59,7 @@
             </div>
         </div>
 
-        <!-- Fecha inicio y ficha fin-->
+        <!-- Fecha inicio y fecha fin-->
         <div id="fechaInicioFin" class="row align-items-center">
             <div class="col-6 form-check" style="margin-left: 1rem;">
                 <input class="form-check-input" type="checkbox" id="gridCheck">
@@ -74,17 +74,31 @@
                 <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
                 <mat-datepicker #datepicker></mat-datepicker>  
                 </div>  
-            
-        </div>
+           
+            </div>
    
-        <div class="col"> 
-            <div class="col"> </div>
-                <div class="col">
+            <div class="col"> 
+                <div class="col"> </div>
+                 <div class="col">
                     Fin:
                     <input matInput [matDatepicker]="picker" placeholder="Elige una fecha" style="display: inline; width: 125px;">
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
                 </div>
+            </div>
+        </div>
+        <!-- Fin de las fecha inicio y fecha fin-->
+
+        <div class="row">
+            <h2>Compañeros de la tarea</h2>
+            <div class="row">
+                <ul class="list-group list-group-flush ms-3">
+                    <li class="list-group-item">Pepe de los palotes</li>
+                    <li class="list-group-item">Manolo del bombo</li>
+                    <li class="list-group-item">Juanito camela</li>
+                    <li class="list-group-item">Jorge maricon</li>
+                    <li class="list-group-item">Que chulo</li>
+                  </ul>
             </div>
         </div>
     </div>
