--- a/NRP/src/app/components/crear-proyecto/crear-proyecto.component.html
+++ b/NRP/src/app/components/crear-proyecto/crear-proyecto.component.html
@@ -61,10 +61,46 @@
         <div class="col">
           <h1 class="text-black mt-3 ms-4">Nuevo proyecto</h1>
         </div>
+        <div class="col-1">
+          <a [routerLink]="['/inicio']"
+            ><img
+              class="mt-4"
+              src="./assets/flecha-hacia-atras.png"
+              alt="atras"
+              width="50"
+              height="50"
+          /></a>
+        </div>
+      </div>
+
+      <div class="row mt-3 ms-4">
+        <div class="col-3 mb-3">
+          <label for="exampleFormControlInput1" class="form-label"
+            >Nombre</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="Nombre"
+          />
+        </div>
+        <div class="row">
+          <div class="col-5 mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label"
+              >Descripción del proyecto</label
+            >
+            <textarea
+              class="form-control"
+              id="exampleFormControlTextarea1"
+              rows="3"
+            ></textarea>
+          </div>
+        </div>
       </div>
 
       <!-- Fecha inicio y ficha fin-->
-      <div id="fechaInicioFin" class="row align-items-center">
+      <div id="fechaInicioFin" class="row align-items-center mt-3 ms-4">
         <div class="col">
           <div class="col"></div>
           <div class="col">
@@ -99,6 +135,18 @@
             ></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </div>
+        </div>
+      </div>
+      <div class="row justify-content-end mt-4">
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-danger ms-5"
+            [routerLink]="['/inicio']"
+          >
+            Cancelar
+          </button>
+          <button type="button" class="btn btn-success ms-3">Guardar</button>
         </div>
       </div>
       <!--Fin del contenido de INICIO-->
