--- a/NRP/src/app/components/crear-proyecto/crear-proyecto.component.html
+++ b/NRP/src/app/components/crear-proyecto/crear-proyecto.component.html
@@ -73,82 +73,107 @@
         </div>
       </div>
 
-      <div class="row mt-3 ms-4">
-        <div class="col-3 mb-3">
-          <label for="exampleFormControlInput1" class="form-label"
-            >Nombre</label
-          >
-          <input
-            type="email"
-            class="form-control"
-            id="exampleFormControlInput1"
-            placeholder="Nombre"
-          />
-        </div>
-        <div class="row">
-          <div class="col-5 mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label"
-              >Descripción del proyecto</label
+      <form #formCrearProyecto="ngForm" (ngSubmit)="crearProyecto()">
+        <div class="row mt-3 ms-4">
+          <div class="col-3 mb-3">
+            <label for="exampleFormControlInput1" class="form-label"
+              >Nombre</label
             >
-            <textarea
+            <input
+              type="email"
               class="form-control"
-              id="exampleFormControlTextarea1"
-              rows="3"
-            ></textarea>
-          </div>
-        </div>
-      </div>
-
-      <!-- Fecha inicio y ficha fin-->
-      <div id="fechaInicioFin" class="row align-items-center mt-3 ms-4">
-        <div class="col">
-          <div class="col"></div>
-          <div class="col">
-            Fecha comienzo
-            <input
-              matInput
-              [matDatepicker]="datepicker"
-              placeholder="Elige una fecha"
-              style="display: inline; width: 125px"
+              id="exampleFormControlInput1"
+              name="nombre"
+              #nombre="ngModel"
+              [(ngModel)]="proyecto.nombre"
+              placeholder="Nombre"
+              required
             />
-            <mat-datepicker-toggle
-              matSuffix
-              [for]="datepicker"
-            ></mat-datepicker-toggle>
-            <mat-datepicker #datepicker></mat-datepicker>
+          </div>
+          <div class="row">
+            <div class="col-5 mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label"
+                >Descripción del proyecto</label
+              >
+              <textarea
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                name="descripcion"
+                #descripcion="ngModel"
+                [(ngModel)]="proyecto.descripcion"
+                rows="3"
+                required
+              ></textarea>
+            </div>
           </div>
         </div>
 
-        <div class="col">
-          <div class="col"></div>
+        <!-- Fecha inicio y ficha fin-->
+        <div id="fechaInicioFin" class="row align-items-center mt-3 ms-4">
           <div class="col">
-            Fecha fin
-            <input
-              matInput
-              [matDatepicker]="picker"
-              placeholder="Elige una fecha"
-              style="display: inline; width: 125px"
-            />
-            <mat-datepicker-toggle
-              matSuffix
-              [for]="picker"
-            ></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
+            <div class="col"></div>
+            <div class="col">
+              Fecha comienzo
+              <input
+                matInput
+                [matDatepicker]="datepicker"
+                name="fechaInicio"
+                #fechaInicio="ngModel"
+                [(ngModel)]="proyecto.fechaInicio"
+                placeholder="Elige una fecha"
+                style="display: inline; width: 125px"
+                required
+              />
+              <mat-datepicker-toggle
+                matSuffix
+                [for]="datepicker"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #datepicker></mat-datepicker>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="col"></div>
+            <div class="col">
+              Fecha fin
+              <input
+                matInput
+                [matDatepicker]="picker"
+                name="fechaFin"
+                #fechaFin="ngModel"
+                [(ngModel)]="proyecto.fechaFin"
+                placeholder="Elige una fecha"
+                style="display: inline; width: 125px"
+                required
+              />
+              <mat-datepicker-toggle
+                matSuffix
+                [for]="picker"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="row justify-content-end mt-4">
-        <div class="col-3">
-          <button
-            type="button"
-            class="btn btn-danger ms-5"
-            [routerLink]="['/inicio']"
-          >
-            Cancelar
-          </button>
-          <button type="button" class="btn btn-success ms-3">Guardar</button>
+        <div class="row justify-content-end mt-4">
+          <div class="col-3">
+            <button
+              type="button"
+              class="btn btn-danger ms-5"
+              [routerLink]="['/inicio']"
+            >
+              Cancelar
+            </button>
+            <button
+              class="btn btn-success ms-3"
+              type="submit"
+              [disabled]="!formCrearProyecto.form.valid"
+            >
+              Guardar
+            </button>
+          </div>
         </div>
-      </div>
+      </form>
+
       <!--Fin del contenido de INICIO-->
     </div>
   </body>
