--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -59,34 +59,87 @@
 
       <div class="row">
         <div class="col">
-          <h1 class="text-black mt-3 ms-4">Proyectos</h1>
+          <h1 class="text-black mt-3 ms-4">Nombre proyecto</h1>
         </div>
       </div>
-      <div class="row justify-content-end">
-        <div class="col-1">
-          <a [routerLink]="['/crear-proyecto']"
-            ><img
-              id="carpeta"
-              src="./assets/carpeta.png"
-              alt="añadir tarea"
-              width="55"
-              height="55"
-          /></a>
+
+      <ul class="nav nav-tabs mt-3" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link active"
+            id="home-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#home"
+            type="button"
+            role="tab"
+            aria-controls="home"
+            aria-selected="true"
+          >
+            Información
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link"
+            id="profile-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#profile"
+            type="button"
+            role="tab"
+            aria-controls="profile"
+            aria-selected="false"
+          >
+            Tareas
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link"
+            id="contact-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#contact"
+            type="button"
+            role="tab"
+            aria-controls="contact"
+            aria-selected="false"
+          >
+            Usuarios
+          </button>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        <div
+          class="tab-pane fade show active"
+          id="home"
+          role="tabpanel"
+          aria-labelledby="home-tab"
+        ></div>
+        <div
+          class="tab-pane fade"
+          id="profile"
+          role="tabpanel"
+          aria-labelledby="profile-tab"
+        >
+          <div class="row justify-content-end mt-3">
+            <div class="col-1">
+              <a [routerLink]="['/proyecto']"
+                ><img
+                  id="addTarea"
+                  src="./assets/add.png"
+                  alt="carpeta"
+                  width="55"
+                  height="55"
+              /></a>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <ul class="list-group list-group-flush ms-3">
-            <li class="list-group-item">
-              <a [routerLink]="['/proyecto']">Proyecto 1</a>
-            </li>
-            <li class="list-group-item">
-              <a [routerLink]="['/proyecto']">Proyecto 2</a>
-            </li>
-            <li class="list-group-item">
-              <a [routerLink]="['/proyecto']">Proyecto 3</a>
-            </li>
-          </ul>
+        <div
+          class="tab-pane fade"
+          id="contact"
+          role="tabpanel"
+          aria-labelledby="contact-tab"
+        >
+          ...
         </div>
       </div>
 
