vista proyecto en proceso 2

--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -61,6 +61,16 @@
         <div class="col">
           <h1 class="text-black mt-3 ms-4">Nombre proyecto</h1>
         </div>
+        <div class="col-1">
+          <a [routerLink]="['/inicio']"
+            ><img
+              class="mt-4"
+              src="./assets/flecha-hacia-atras.png"
+              alt="atras"
+              width="50"
+              height="50"
+          /></a>
+        </div>
       </div>
 
       <ul class="nav nav-tabs mt-3" id="myTab" role="tablist">
