Maquetación vista proyecto

--- a/NRP/src/app/app.component.html
+++ b/NRP/src/app/app.component.html
@@ -5,8 +5,12 @@
   </head>
 
   <body>
-    <section id="contenido">
+    <section class = "container" style="height: 90%;">
       <router-outlet></router-outlet>
     </section>
+   
+    <footer class="py-3 my-4 bg-light">
+      <p class="text-center text-black">&copy; 2021 NRP - Procesos de la Ingenería del Software</p>
+    </footer>
   </body>
 </html>
