--- a/NRP/src/app/components/proyecto/proyecto.component.css
+++ b/NRP/src/app/components/proyecto/proyecto.component.css
@@ -8,10 +8,10 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#addTarea {
+#addTarea, #deleteTarea, #deleteUsuario,#addUsuario {
   transition: all 300ms;
 }
 
-#addTarea:hover {
+#addTarea:hover, #deleteTarea:hover, #deleteUsuario:hover,#addUsuario:hover {
   transform: scale(1.1);
 }
