--- a/NRP/src/app/components/requisito/requisito.component.html
+++ b/NRP/src/app/components/requisito/requisito.component.html
@@ -11,46 +11,14 @@
 
 <body>
     <div class="container">
-        <!--Inicio del menu-->
-        <header class="row-12">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" [routerLink]="['/inicio']">
-                        <img src="./assets/logoB.png" alt="logo" width="200" height="100" /></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+         <!--Inicio del menu-->
+         <menu></menu>
+         <!--Fin del menu-->
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="col navbar-nav mb-2 mb-lg-0 justify-content-lg-end">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-black" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Bienvenido, {{ usuario.nombre }}
-                    </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Configuración</a></li>
-                                    <li>
-                                        <a class="dropdown-item" (click)="cerrarSesion()">Cerrar sesión</a
-                        >
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </header>
-    </div>
-  
-<!--Fin del menu-->
-
-    <!-- Fin de la barra de navegación-->
-
-    <!-- Titulo de la vista-->
+          <!-- Titulo de la vista-->
     <h3 style="margin-top: 1rem; margin-left: 1rem;"> Tareas del proyecto - "nombre" </h3>
 
     <!-- Contenido de la vista-->
-
-
-</body>
+    </div>
+  </body>
 </html>
