darle macro al menu, terminado el cliente de la aplicación

--- a/NRP/src/app/components/inicio-cliente/inicio-cliente.component.html
+++ b/NRP/src/app/components/inicio-cliente/inicio-cliente.component.html
@@ -24,13 +24,13 @@
             <div class="col">
                 <ul class="list-group list-group-flush ms-3">
                     <li class="list-group-item">
-                        <a [routerLink]="['/proyecto']">Proyecto 1</a>
+                        <a [routerLink]="['/proyecto-cliente']">Proyecto 1</a>
                     </li>
                     <li class="list-group-item">
-                        <a [routerLink]="['/proyecto']">Proyecto 2</a>
+                        <a [routerLink]="['/proyecto-cliente']">Proyecto 2</a>
                     </li>
                     <li class="list-group-item">
-                        <a [routerLink]="['/proyecto']">Proyecto 3</a>
+                        <a [routerLink]="['/proyecto-cliente']">Proyecto 3</a>
                     </li>
                 </ul>
             </div>
