--- a/NRP/src/app/components/menu/menu.component.html
+++ b/NRP/src/app/components/menu/menu.component.html
@@ -2,8 +2,15 @@
 <header class="row-12">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" [routerLink]="['/inicio']">
-                <img src="./assets/logoB.png" alt="logo" width="200" height="100" /></a>
+            <a *ngIf="this.usuario.esCliente; else elseBlock" class="navbar-brand" [routerLink]="['/inicio-cliente']">
+                <img src="./assets/logoB.png" alt="logo" width="200" height="100" />
+            </a>
+            <ng-template #elseBlock>
+                <a class="navbar-brand" [routerLink]="['/inicio']">
+                    <img src="./assets/logoB.png" alt="logo" width="200" height="100" />
+                </a>
+            </ng-template>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
