avance de la visa crear tareas del jefe de proyecto

--- a/NRP/src/app/components/crear-tarea/crear-tarea.component.html
+++ b/NRP/src/app/components/crear-tarea/crear-tarea.component.html
@@ -18,114 +18,97 @@
 
         <div class="row">
             <div class="col">
-                <h1 class="text-black mt-3 ms-4">Nuevo proyecto</h1>
+                <h1 class="text-black mt-3 ms-4">Nueva Tarea</h1>
             </div>
             <div class="col-1">
-                <a [routerLink]="['/inicio']"><img class="mt-4" src="./assets/flecha-hacia-atras.png" alt="atras" width="50" height="50" /></a>
+                <a [routerLink]="['/proyecto']"><img class="mt-4" src="./assets/flecha-hacia-atras.png" alt="atras" width="50" height="50" /></a>
             </div>
         </div>
 
-        <form #formCrearProyecto="ngForm" (ngSubmit)="crearProyecto()">
-            <div class="row mt-3 ms-4">
-                <div class="col-3 mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Nombre</label
-            >
-            <input
-              type="email"
-              class="form-control"
-              id="exampleFormControlInput1"
-              name="nombre"
-              #nombre="ngModel"
-              [(ngModel)]="proyecto.nombre"
-              placeholder="Nombre"
-              required
-            />
-          </div>
-          <div class="row">
-            <div class="col-5 mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label"
-                >Descripción del proyecto</label
-              >
-              <textarea
-                class="form-control"
-                id="exampleFormControlTextarea1"
-                name="descripcion"
-                #descripcion="ngModel"
-                [(ngModel)]="proyecto.descripcion"
-                rows="3"
-                required
-              ></textarea>
+        <form #formCrearProyecto="ngForm">
+            <div class="row mt-3 ms-4 ">
+                <div class="col-3 mb-3 ">
+                    <label for="exampleFormControlInput1 " class="form-label ">Nombre de tarea </label>
+                    <input type="email " class="form-control " id="exampleFormControlInput1 " name="nombre " placeholder="Nombre " required />
+                </div>
+                <div class="row ">
+                    <div class="col-5 mb-3 ">
+                        <label for="exampleFormControlTextarea1 " class="form-label ">Descripción de la tarea </label>
+                        <textarea class="form-control " id="exampleFormControlTextarea1 " name="descripcion " rows="3 " required></textarea>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
 
-        <!-- Fecha inicio y ficha fin-->
-        <div id="fechaInicioFin" class="row align-items-center mt-3 ms-4">
-          <div class="col">
-            <div class="col"></div>
-            <div class="col">
-              Fecha comienzo
-              <input
-                matInput
-                [matDatepicker]="datepicker"
-                name="fechaInicio"
-                #fechaInicio="ngModel"
-                [(ngModel)]="proyecto.fechaInicio"
-                placeholder="Elige una fecha"
-                style="display: inline; width: 125px"
-                required
-              />
-              <mat-datepicker-toggle
-                matSuffix
-                [for]="datepicker"
-              ></mat-datepicker-toggle>
-              <mat-datepicker #datepicker></mat-datepicker>
-            </div>
-          </div>
+            <!-- Fecha inicio y ficha fin-->
+            <div id="fechaInicioFin " class="row align-items-center mt-3 ms-4 ">
+                <div class="col ">
+                    <div class="col "></div>
+                    <div class="col ">
+                        Fecha comienzo
+                        <input matInput [matDatepicker]="datepicker " name="fechaInicio " placeholder="Elige una fecha " style="display: inline; width: 125px " required />
+                        <mat-datepicker-toggle matSuffix [for]="datepicker "></mat-datepicker-toggle>
+                        <mat-datepicker #datepicker></mat-datepicker>
+                    </div>
+                </div>
 
-          <div class="col">
-            <div class="col"></div>
-            <div class="col">
-              Fecha fin
-              <input
-                matInput
-                [matDatepicker]="picker"
-                name="fechaFin"
-                #fechaFin="ngModel"
-                [(ngModel)]="proyecto.fechaFin"
-                placeholder="Elige una fecha"
-                style="display: inline; width: 125px"
-                required
-              />
-              <mat-datepicker-toggle
-                matSuffix
-                [for]="picker"
-              ></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
+                <div class="col ">
+                    <div class="col "></div>
+                    <div class="col ">
+                        Fecha fin
+                        <input matInput [matDatepicker]="picker " name="fechaFin " placeholder="Elige una fecha " style="display: inline; width: 125px " required />
+                        <mat-datepicker-toggle matSuffix [for]="picker "></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="row justify-content-end mt-4">
-          <div class="col-3">
-            <button
-              type="button"
-              class="btn btn-danger ms-5"
-              [routerLink]="['/inicio']"
-            >
+
+            <h2 class="m-3">Lista de clientes del proyecto</h2>
+            <div class="row justify-content-end mt-3">
+                <div class="col-1">
+                    <img id="addUsuario" src="./assets/add-user.png" alt="carpeta" width="55" height="55" (click)="mostrarListaClientes()" />
+                </div>
+                <div class="row">
+                    <div id="ListaClientes" class="col-3">
+                        <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white mt-4" style="width: 380px;">
+                            <div class="row">
+                                <div class="col-8">
+                                    <span class="fs-5 fw-semibold">Lista usuarios</span>
+                                </div>
+                                <div class="col-3">
+                                    <img id="cerrarLista" src="./assets/cancel.png" alt="cerrar lista" width="25" height="25" style="cursor: pointer; margin-left: 88%;" (click)="cerrarLista()">
+                                </div>
+                            </div>
+                            <div class="list-group list-group-flush  scrollarea ">
+                                <div *ngFor="let usuario of arrUsuarios" class="row m-3">
+                                    <div class="col-10">
+                                        <strong>{{usuario.nombre}} </strong>
+                                    </div>
+                                    <div class="col-2">
+                                        <img id="addUsuario" src="./assets/addU.png" alt="cerrar lista" width="25" height="25" style="cursor: pointer;">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="row justify-content-end mt-4 ">
+                <div class="col-3 ">
+                    <button type="button " class="btn btn-danger ms-5 " [routerLink]="[ '/inicio'] ">
               Cancelar
             </button>
-            <button
-              class="btn btn-success ms-3"
-              type="submit"
-              [disabled]="!formCrearProyecto.form.valid"
-            >
+                    <button class="btn btn-success ms-3 " type="submit " [disabled]="!formCrearProyecto.form.valid ">
               Guardar
             </button>
-          </div>
-        </div>
-      </form>
+                </div>
+            </div>
+        </form>
 
-      <!--Fin del contenido de INICIO-->
+        <!--Fin del contenido de INICIO-->
     </div>
-  </body>
+</body>
+
 </html>
